CSS: Fixed TOC scroll unhidden by navbar

--- a/resources/base.scss
+++ b/resources/base.scss
@@ -182,6 +182,7 @@ footer {
 html {
     position: relative;
     height: 100%;
+    scroll-padding-top: 60px;
 }
 
 a {
